--- a/style.css
+++ b/style.css
@@ -5,6 +5,18 @@
     display: flex;
     height: 100%;
 }
+@font-face {
+    font-family:myfont;
+    src: url(hankenGrotesk-Bold.ttf);
+}
+@font-face {
+    font-family: secondfont;
+    src: url(HankenGrotesk-ExtraBold.ttf);
+}
+@font-face {
+    font-family: thirdfont;
+    src: url(HankenGrotesk-Medium.ttf);
+}
 /* first section */
 #firstpart{
     width: 50%;
@@ -18,6 +30,7 @@
     font-weight: lighter;
     justify-content: center;
     background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241,81%, 54%));
+    font-family: secondfont;
 }
 /* first child div */
 .circle{
@@ -32,8 +45,9 @@
     
 }
 .small{
-    font-size: small;
-    font-weight: lighter;
+    font-size:12px;
+    color: rgba(245, 245, 245, 0.548);
+    font-family:thirdfont;
 }
 .circle h4{
     font-size: 80px;
@@ -42,10 +56,16 @@
 }
 .circle p{
 margin-top: 0px;
-font-size: smaller;
-font-weight: lighter;
+font-size: 15px;
+font-family:thirdfont;
+color: rgba(245, 245, 245, 0.548);
+}
+.Result{
+    font-family: thirdfont;
+    color:  rgba(245, 245, 245, 0.548);
 }
 .big{
+    font-family: myfont;
     font-size: 20px;
     font-weight: bolder;
 }
@@ -56,7 +76,7 @@ font-weight: lighter;
     background-color: hsl(0, 0, 100%);
     font-size: 18px;
     background-color: hsl(0, 0%, 100%);
-    
+   
 }
 /* First child div */
 .second{
