--- a/style.css
+++ b/style.css
@@ -169,13 +169,13 @@ button{
     background-color: hsl(224, 30%, 27%);
     color: white;
     border: none;
-    width: 400px;
+    width: 50%;
    font-size: 18px;
    line-height: 25px;
    padding: 10px 0;
    border-radius: 25px;
    cursor: pointer;
-   margin-left: 100px;
+   margin-left: 25%;
    
 }
 button:active{
@@ -191,7 +191,7 @@ footer span{
     color: rgb(47, 47, 250);
 }
 
-@media screen and (max-width:375px) {
+@media screen and (max-width:992px) {
     .parent{
         display: block;
     }
