--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 /* Parent div */
+body{
+    background-color: hsl(221, 100%, 96%);
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
 .parent{
     max-width: 1440px;
     width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
 }
 @font-face {
@@ -19,7 +26,7 @@
 }
 /* first section */
 #firstpart{
-    width: 50%;
+    width: 20%;
     height: 400px;
     background-color: hsl(252, 100%, 67%);
     border-radius: 6%;
@@ -31,6 +38,8 @@
     justify-content: center;
     background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241,81%, 54%));
     font-family: secondfont;
+
+    
 }
 /* first child div */
 .circle{
@@ -71,12 +80,14 @@ color: rgba(245, 245, 245, 0.548);
 }
 /* Second section */
 #secondpart{
-    width: 50%;
+    width: 20%;
     height: 400px;
     background-color: hsl(0, 0, 100%);
     font-size: 18px;
     background-color: hsl(0, 0%, 100%);
-   
+    border-top-right-radius:6% ;
+    border-bottom-right-radius: 6%;
+    
 }
 /* First child div */
 .second{
@@ -87,81 +98,81 @@ color: rgba(245, 245, 245, 0.548);
 .par1{
     border-radius: 10px;
     background-color: hsla(0, 100%, 67%, 0.205);
-    height: 25px;
-    margin: 20px;
-    padding-left: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    height: 20px;
+    margin:10px 20px;
+    padding-left: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     color: hsl(0, 100%, 67%);
     background-image: url(icon-reaction.svg);
     background-repeat: no-repeat;
-    background-position: 10px 17px;
+    background-position: 10px 16px;
     text-align: right;
 }
 .num1{
-     margin-left: 72%;
-    margin-right: 5%;
+     margin-left: 30%;
+    margin-right: 8%;
     color: black;
 }
 /* second paragraph */
 .par2{
     border-radius: 10px;
     background-color: hsla(39, 100%, 56%, 0.205);
-    height: 25px;
-    margin: 20px;
-    padding-left: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    height: 20px;
+    margin:10px 20px;
+    padding-left: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     color: hsl(39, 100%, 56%);
     background-image: url(icon-memory.svg);
     background-repeat: no-repeat;
-    background-position: 10px 17px;
+    background-position: 10px 16px;
     text-align: right;
 }
 .num2{
-    margin-left: 72%;
-    margin-right: 5%;
+    margin-left: 30%;
+    margin-right: 8%;
     color: black;
 }
 /* third paragraph */
 .par3{
     border-radius: 10px;
     background-color: hsla(166, 100%, 37%, 0.205);
-    height: 25px;
-    margin: 20px;
-    padding-left: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    height: 20px;
+    margin:10px 20px;
+    padding-left: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     color: hsl(166, 100%, 37%);
     background-image: url(icon-verbal.svg);
     background-repeat: no-repeat;
-    background-position: 10px 17px;
+    background-position: 10px 16px;
     text-align: right;
 }
 
 .num3{
-    margin-left: 75%;
-    margin-right: 5%;
+    margin-left: 37%;
+    margin-right: 9%;
     color: black;
 }
 /* fourth paragraph */
 .par4{
     border-radius: 10px;
     background-color: hsla(241, 85%, 45%, 0.205);
-    height: 25px;
-    margin: 20px;
-    padding-left: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    height: 20px;
+    margin: 10px 20px;
+    padding-left: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     color: hsl(241, 85%, 45%);
     background-image: url(icon-visual.svg);
     background-repeat: no-repeat;
-    background-position: 10px 17px;
+    background-position: 10px 16px;
     text-align: right;
 }
 .num4{
-    margin-left: 75%;
-    margin-right: 5%;
+    margin-right:10%;
+    margin-left: 37%;
     color: black;
 }
 /* Button */
@@ -169,13 +180,15 @@ button{
     background-color: hsl(224, 30%, 27%);
     color: white;
     border: none;
-    width: 50%;
+    width: 85%;
    font-size: 18px;
    line-height: 25px;
-   padding: 10px 0;
+   padding: 10px;
    border-radius: 25px;
    cursor: pointer;
-   margin-left: 25%;
+   margin-left: 5%;
+   margin-top: 2%;
+   margin-bottom: 2%;
    
 }
 button:active{
@@ -184,7 +197,7 @@ button:active{
 /* footer */
 footer p{
     font-style: italic;
-    margin-left: 50px;
+    margin-left: 10%;
     font-size: small;
 }
 footer span{
@@ -192,31 +205,39 @@ footer span{
 }
 
 @media screen and (max-width:992px) {
+    body{
+        background-color: white;
+    }
     .parent{
         display: block;
     }
     #firstpart{
-        width: 100% !important; 
+        width: 90% !important; 
         margin-top: 0%;
+        margin-left: 5%;
+        margin-right: 5%;
     }
     #secondpart{
-        width: 100% !important;
+        width: 90% !important;
         margin-top: 0%;
+        height: 400px;
+        margin-left: 5%;
+        margin-right: 5%;
     }
     button{
     margin-left: 20px;
     background-color:hsl(224, 30%, 27%) ;
-    width: 300px;
+    width: 85%;
     }
     .num1{
-        margin-left: 50%;
+        margin-left: 45%;
     }
     .num2{
-        margin-left: 50%;
+        margin-left: 45%;
     }.num3{
-        margin-left: 54%;
+        margin-left: 50%;
     }.num4{
-        margin-left: 54%;
+        margin-left: 50%;
     }
     footer{
         margin-left:0px;
